--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Trivia Game</title>
 </head>
 <body>
-		
+		TEST
 	<!-- Our code goes here!!! -->
 
 	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
