--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 	<!-- Our code goes here!!! -->
 
-
+	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
