--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
 			<div class="col-md-12">
 				<label for="yourMood">Please upload your pictures:</label>
 				<!-- Capturin photo from web cam -->
-				<div class="camera">
-					<video id="video">Video stream not available.</video>
-					<button id="startbutton">Take photo</button>
+				<div>
+					<div class="camera">
+						<video id="video">Video stream not available.</video>
+						<button id="startbutton">Take photo</button>
+					</div>
+					<canvas id="canvas">
+				  	</canvas>
+				  	<div class="output">
+				    	<img id="photo" alt="The screen capture will appear in this box.">
+					</div>
 				</div>
-
-				  <canvas id="canvas">
-				  </canvas>
-				  <div class="output">
-				    <img id="photo" alt="The screen capture will appear in this box.">
-				  </div>
 
 
 
@@ -37,7 +38,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<label for="yourMood">Please upload your three favorite pictures:</label>
-				<input type='file' id="picture-uploader" onchange="readURL(this);" />	
+				<input type='file' id="picture-uploader" onchange="getImage(this);" />	
 				<div id="img-block">
 					<!-- three images goes here -->
 				</div>
@@ -47,8 +48,12 @@
 		<div class="row">
 			<div class="col-md-12">
 				<label for="yourMood">Please type a paragraph describing either your life, day, or current mood: </label>
-				<textarea class="form-control" rows="5" id="comment"></textarea>
+				<textarea class="form-control" rows="5" id="paragraph"></textarea>
+				<button id="submitParagraph">Submit Paragraph</button>
 			</div>
+		</div>
+		<div class="row">
+			<button class="btn btn-success btn-lg"> Get Recomended Movie</button>
 		</div>
 	</div>
 
