--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="container text-center">
 		<div class="row" id="user-avatar">
-			<div class="col-md-12">
+			<div class="col-md-12 fieldStyle">
 				<label for="yourMood">Please upload your pictures:</label>
 				<!-- Capturin photo from web cam -->
 				<div>
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="row" id= "user-pictures">
-			<div class="col-md-12">
+			<div class="col-md-12 fieldStyle">
 				<label for="yourMood">Please upload your three favorite pictures:</label>
 				<input type='file' id="picture-uploader" onchange="getImage(this);">	
 				<div id="img-block">
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="row" id="user-paragraph">
-			<div class="col-md-12">
+			<div class="col-md-12 fieldStyle">
 				<label for="yourMood">Please type a paragraph describing either your life, day, or current mood: </label>
 				<textarea class="form-control" rows="5" id="paragraph"></textarea>
 				<button id="submitParagraph">Submit Paragraph</button>
@@ -58,7 +58,7 @@
 	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/app.js"></script>
 	<script src="assets/javascript/web_cam.js"></script>
 </body>
 </html>
