working on adding movies to DB

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8">
- 	<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Ek+Mukta" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>What to watch</title>
 </head>
 <body>
+
+	<button id="addToDB">Add to DB</button>
+	<button id="sugestions">See sugestions</button>
 		
 	<!-- Our code goes here!!! -->
 	<div class="container">
@@ -132,11 +136,32 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="container">
+	<div class="row" id="recom">
+		<div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>
+            <div class="swiper-slide">Slide 10</div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+    </div>
+	</div>
+	</div>
 
 	<div class="container text-center" id="main">
 		<div class="row " >
 			<div class="col-md-12 fieldStyle" id="fav-field">
-				
+			
 			</div>
 			
 		</div>
@@ -183,7 +208,7 @@
 			<button class="btn btn-success btn-lg"> Get Recomended Movie</button>
 		</div>
 	</div>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
