--- a/index.html
+++ b/index.html
@@ -137,36 +137,35 @@
 		</div>
 	</div>
 	
+
+	<!-- Swiper field -->
 	<div class="container">
-	<div class="row" id="recom">
-		<div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
-            <div class="swiper-slide">Slide 6</div>
-            <div class="swiper-slide">Slide 7</div>
-            <div class="swiper-slide">Slide 8</div>
-            <div class="swiper-slide">Slide 9</div>
-            <div class="swiper-slide">Slide 10</div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-    </div>
-	</div>
+		<div class="row" >
+		<div class="col-md-12 fieldStyle" id="swiper-field">
+			<div class="swiper-container">
+		        <div class="swiper-wrapper">
+
+		        </div>
+	        <!-- Add Pagination -->
+	        <div class="swiper-pagination"></div>
+	    	</div>
+	    	</div>
+		</div>
 	</div>
 
-	<div class="container text-center" id="main">
+	<!-- Saved sugestions field -->
+	<div class="container">
 		<div class="row " >
 			<div class="col-md-12 fieldStyle" id="fav-field">
-			
+				<h3> You Saved movies</h3>
+                <h2> No saved movies</h2>
 			</div>
 			
 		</div>
-
-
+	</div>
+	
+	<!-- Main block  -->
+	<div class="container text-center" id="main">
 		<div class="row" id="user-avatar">
 			<div class="col-md-12 fieldStyle">
 				<label for="yourMood">Take you photo:</label>
@@ -208,11 +207,12 @@
 			<button class="btn btn-success btn-lg"> Get Recomended Movie</button>
 		</div>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
 	<script src = "assets/javascript/auth.js"></script>
+	<script src = "assets/javascript/profile.js"></script>
 	<script src="assets/javascript/app.js"></script>
 	<script src="assets/javascript/web_cam.js"></script>
 </body>
