working on saving movie to DB

--- a/index.html
+++ b/index.html
@@ -141,15 +141,18 @@
 	<!-- Swiper field -->
 	<div class="container">
 		<div class="row" >
-		<div class="col-md-12 fieldStyle" id="swiper-field">
-			<div class="swiper-container">
-		        <div class="swiper-wrapper">
-
-		        </div>
-	        <!-- Add Pagination -->
-	        <div class="swiper-pagination"></div>
-	    	</div>
-	    	</div>
+			<div class="col-md-12 fieldStyle" id="swiper-field">
+				<div class="swiper-container gallery-top">
+			        <div class="swiper-wrapper" id="swiper-wrapper-top">
+			           
+			        </div>
+			    </div>
+			    <div class="swiper-container gallery-thumbs">
+			        <div class="swiper-wrapper" id="swiper-wrapper-bottom">
+			           
+			        </div>
+			    </div>
+			</div>
 		</div>
 	</div>
 
