--- a/index.html
+++ b/index.html
@@ -142,15 +142,24 @@
         </div>
     </div>
 
-
-    <!-- Swiper field -->
+    <!-- Saved sugestions field -->
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 fieldStyle nav-field" id="proposal-movies-title">
-                We supouse this movies is just right for you:
+        <div class="row ">
+            <div class="col-md-12 fieldStyle" id="fav-field">
+                <h4> No saved movies</h4>
             </div>
         </div>
     </div>
+
+    <!-- Swiper field -->
+    <!--<div class="container">
+        <div class="row">
+            <div class="col-md-12 fieldStyle nav-field" id="proposal-movies-title">
+                We supouse this movies are just right for you:
+            </div>
+        </div>
+    </div>-->
+
 
     <div class="container">
         <div class="row">
@@ -169,16 +178,6 @@
         </div>
     </div>
 
-    <!-- Saved sugestions field -->
-    <div class="container">
-        <div class="row ">
-            <div class="col-md-12 fieldStyle" id="fav-field">
-                <h3> You Saved movies</h3>
-                <h2> No saved movies</h2>
-            </div>
-
-        </div>
-    </div>
 
     <!-- Main block  -->
     <div class="container text-center" id="main">
@@ -219,7 +218,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn btn-success btn-lg" id="getRecomendedMovies"> Get Recomended Movie</button>
+            <button class="btn btn-success btn-lg" id="getRecomendedMovies"> Get Recomended Movies</button>
         </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
