--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                     </div>
                 </div>
-                <div class="swiper-container gallery-thumbs">
+                <div class="swiper-container gallery-thumbs" id="hiding">
                     <div class="swiper-wrapper" id="swiper-wrapper-bottom">
 
                     </div>
